--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -351,15 +351,21 @@ jobs:
             done
           }
 
-
-          # Compare latest release with main
-          if [ -n "$latest_branch" ]; then
-            compare_flags latest_release_flags main_flags "$latest_branch" "main"
+          # Call the function with latest and previous release flags
+          if [ -n "$latest_branch" ] && [ -n "$previous_branch" ]; then
+            compare_latest_to_previous_release latest_release_flags previous_release_flags "$latest_branch" "$previous_branch"
+          else
+            echo "No previous release available for comparison."
           fi
 
           # Compare latest release with previous release if both are available
           if [ -n "$latest_branch" ] && [ -n "$previous_branch" ]; then
             compare_flags latest_release_flags previous_release_flags "$latest_branch" "$previous_branch"
+          fi
+
+          # Compare latest release with main
+          if [ -n "$latest_branch" ]; then
+            compare_flags latest_release_flags main_flags "$latest_branch" "main"
           fi
 
           echo "Generated FEATURE_FLAGS.md content:"
