--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -356,12 +356,15 @@ jobs:
             compare_latest_to_previous_release latest_release_flags previous_release_flags "$latest_branch" "$previous_branch"
           else
             echo "No previous release available for comparison."
+            if [ -n "$latest_branch" ]; then
+             compare_latest_to_previous_release latest_release_flags previous_release_flags "$latest_branch" "$previous_branch"
+            fi
           fi
 
           # Compare latest release with previous release if both are available
-          if [ -n "$latest_branch" ] && [ -n "$previous_branch" ]; then
-            compare_flags latest_release_flags previous_release_flags "$latest_branch" "$previous_branch"
-          fi
+          #if [ -n "$latest_branch" ] && [ -n "$previous_branch" ]; then
+            #compare_flags latest_release_flags previous_release_flags "$latest_branch" "$previous_branch"
+          #fi
 
           # Compare latest release with main
           if [ -n "$latest_branch" ]; then
