--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -169,19 +169,19 @@ jobs:
               echo "## Feature Flags in \`$latest_branch\`" >> ${{ env.FEATURE_FLAGS_DOC }}
 
               # Begin by printing all feature flags in the latest release
-              echo "| Count | Key              | $latest_branch Value       |" >> ${{ env.FEATURE_FLAGS_DOC }}
-              echo "|-------|------------------|---------------------------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+              echo "| Count | Key              | $latest_branch Value       | $previous_branch Value    |" >> ${{ env.FEATURE_FLAGS_DOC }}
+              echo "|-------|------------------|---------------------------|---------------------------|" >> ${{ env.FEATURE_FLAGS_DOC }}
 
               count=1
               for key in "${!latest_flags[@]}"; do
-                echo "| $count | $key | \`${latest_flags[$key]}\` |" >> ${{ env.FEATURE_FLAGS_DOC }}
+                echo "| $count | $key | \`${latest_flags[$key]}\` | \`${previous_flags[$key]:-N/A}\` |" >> ${{ env.FEATURE_FLAGS_DOC }}
                 ((count++))
               done
               echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
 
               # If previous release branch is available, proceed with comparison
               if [ -n "$previous_branch" ]; then
-                echo "## Comparison between \`$previous_branch\` and \`$latest_branch\`" >> ${{ env.FEATURE_FLAGS_DOC }}
+                echo "## Comparison between \`$latest_branch\` and \`$previous_branch\`" >> ${{ env.FEATURE_FLAGS_DOC }}
 
                 new_changes=()
                 updated_changes=()
@@ -193,64 +193,71 @@ jobs:
                   previous_value="${previous_flags[$key]:-N/A}"
 
                   if [[ "$previous_value" == "N/A" ]]; then
-                    new_changes+=("| $count | $key | \`$latest_value\` | New 🔵 |")
+                    new_changes+=("| $key | \`$latest_value\` | N/A | New 🔵 |")
                   elif [[ "$latest_value" != "$previous_value" ]]; then
-                    updated_changes+=("| $count | $key | \`$latest_value\` | Updated 🟡 |")
+                    updated_changes+=("| $key | \`$latest_value\` | \`$previous_value\` | Updated 🟡 |")
                   fi
-                  ((count++))
                 done
 
                 # Identify deleted flags
                 for key in "${!previous_flags[@]}"; do
                   if [[ -z "${latest_flags[$key]}" ]]; then
-                    deleted_changes+=("| $count | $key | N/A | Deleted 🔴 |")
-                    ((count++))
+                    deleted_changes+=("| $key | N/A | \`${previous_flags[$key]}\` | Deleted 🔴 |")
                   fi
                 done
 
                 # Output New, Updated, and Deleted tables
                 if [ ${#new_changes[@]} -gt 0 ]; then
                   echo "### New Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
-                  echo "| Count | Key              | $latest_branch Value       | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-                  echo "|-------|------------------|---------------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
-                  printf "%s\n" "${new_changes[@]}" >> ${{ env.FEATURE_FLAGS_DOC }}
+                  echo "| Count | Key              | $latest_branch Value       | $previous_branch Value    | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+                  echo "|-------|------------------|---------------------------|---------------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+                  count=1
+                  for change in "${new_changes[@]}"; do
+                    echo "| $count $change" >> ${{ env.FEATURE_FLAGS_DOC }}
+                    ((count++))
+                  done
                   echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
                 fi
 
                 if [ ${#updated_changes[@]} -gt 0 ]; then
                   echo "### Updated Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
-                  echo "| Count | Key              | $latest_branch Value       | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-                  echo "|-------|------------------|---------------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
-                  printf "%s\n" "${updated_changes[@]}" >> ${{ env.FEATURE_FLAGS_DOC }}
+                  echo "| Count | Key              | $latest_branch Value       | $previous_branch Value    | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+                  echo "|-------|------------------|---------------------------|---------------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+                  count=1
+                  for change in "${updated_changes[@]}"; do
+                    echo "| $count $change" >> ${{ env.FEATURE_FLAGS_DOC }}
+                    ((count++))
+                  done
                   echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
                 fi
 
                 if [ ${#deleted_changes[@]} -gt 0 ]; then
                   echo "### Deleted Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
-                  echo "| Count | Key              | $latest_branch Value       | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-                  echo "|-------|------------------|---------------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
-                  printf "%s\n" "${deleted_changes[@]}" >> ${{ env.FEATURE_FLAGS_DOC }}
+                  echo "| Count | Key              | $latest_branch Value       | $previous_branch Value    | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+                  echo "|-------|------------------|---------------------------|---------------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+                  count=1
+                  for change in "${deleted_changes[@]}"; do
+                    echo "| $count $change" >> ${{ env.FEATURE_FLAGS_DOC }}
+                    ((count++))
+                  done
                   echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
                 fi
 
                 # Full Comparison Table
                 echo "### Full Feature Flags Comparison" >> ${{ env.FEATURE_FLAGS_DOC }}
-                echo "| Count | Key              | $latest_branch Value       | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-                echo "|-------|------------------|---------------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+                echo "| Count | Key              | $latest_branch Value       | $previous_branch Value    | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+                echo "|-------|------------------|---------------------------|---------------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
 
-                # Track processed keys for ordering
-                declare -A seen_keys
                 count=1
-
-                # Output new, updated, and deleted flags first in the full comparison table
                 for change in "${new_changes[@]}" "${updated_changes[@]}" "${deleted_changes[@]}"; do
-                  echo "$change" >> ${{ env.FEATURE_FLAGS_DOC }}
+                  echo "| $count $change" >> ${{ env.FEATURE_FLAGS_DOC }}
+                  ((count++))
                 done
 
                 # Append unchanged flags at the end of the full comparison table
                 for key in "${!latest_flags[@]}"; do
-                  if [[ -z "${seen_keys[$key]}" ]] && [[ "${previous_flags[$key]:-N/A}" == "${latest_flags[$key]}" ]]; then
-                    echo "| $count | $key | \`${latest_flags[$key]}\` | Unchanged ⚪ |" >> ${{ env.FEATURE_FLAGS_DOC }}
+                  if [[ "${previous_flags[$key]:-N/A}" == "${latest_flags[$key]}" ]]; then
+                    echo "| $count | $key | \`${latest_flags[$key]}\` | \`${previous_flags[$key]}\` | Unchanged ⚪ |" >> ${{ env.FEATURE_FLAGS_DOC }}
                     ((count++))
                   fi
                 done
