--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -293,6 +293,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          
       - name: Set up Git
         run: |
           git config --global user.name "github-actions[bot]"
